Fix whitespace errors in tags and labels

--- a/src/components/gds-label/_index.scss
+++ b/src/components/gds-label/_index.scss
@@ -1,5 +1,5 @@
 @mixin base {
-  display: inline;
+  display: inline-block;
   font-family: var(--gds-label-font-family);
   text-transform: var(--gds-label-text-transform, uppercase);
   line-height: var(--gds-label-line-height);
