--- a/src/components/gds-tag/gds-tag.scss
+++ b/src/components/gds-tag/gds-tag.scss
@@ -1,7 +1,7 @@
 @use "index" as *;
 
 gds-tag {
-  display: inline-block;
+  display: inline-flex;
 }
 
 .gds-tag {
